--- a/src/EchoesOfTheAbyss.App/EchoesOfTheAbyss.App.csproj
+++ b/src/EchoesOfTheAbyss.App/EchoesOfTheAbyss.App.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\EchoesOfTheAbyss.Lib\EchoesOfTheAbyssLib.csproj" />
+      <ProjectReference Include="..\EchoesOfTheAbyss.Lib\EchoesOfTheAbyss.Lib.csproj" />
     </ItemGroup>
 
 </Project>
