--- a/src/EchoesOfTheAbyss.Lib/EchoesOfTheAbyss.Lib.csproj
+++ b/src/EchoesOfTheAbyss.Lib/EchoesOfTheAbyss.Lib.csproj
@@ -11,12 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoGen" Version="0.0.12" />
-    <PackageReference Include="AutoGen.Core" Version="0.0.11" />
+    <PackageReference Include="AutoGen" Version="0.0.13-custom-2404180441" />
+    <PackageReference Include="AutoGen.Core" Version="0.0.13-custom-2404180441" />
+    <PackageReference Include="AutoGen.LiteLLM" Version="0.0.13-custom-2404180441" />
     <PackageReference Include="AutoGen.LMStudio" Version="0.0.11" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\AutoGen.Jan\AutoGen.Jan.csproj" />
     <ProjectReference Include="..\AutoGen.SourceGenerator\AutoGen.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />
   </ItemGroup>
 
